engine/codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__hook_status_reflows_with_background_activity.snap
---
source: tui/src/status_indicator_widget.rs
expression: "frames.join(\"\\n\")"
---
124 columns:
"Working (0s • esc to interrupt) · 1 background terminal running · /ps to view · /stop to close · checking 日本語 ｶﾞﾊﾟ policy" Hidden by multi-width symbols: [(107, " "), (109, " "), (111, " "), (114, " "), (116, " ")]
"  └ existing details                                                                                                        "

123 columns:
"Working (0s • esc to interrupt) · 1 background terminal running · /ps to view · /stop to close                             "
"  └ checking 日本語 ｶﾞﾊﾟ policy                                                                                            " Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (21, " "), (23, " ")]
"  └ existing details                                                                                                       "

24 columns:
"Working (0s • esc to in…"
"  └ checking 日本語 ｶﾞ… " Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (21, " ")]
"  └ existing details    "

124 columns:
"Working (0s • esc to interrupt) · 1 background terminal running · /ps to view · /stop to close · checking 日本語 ｶﾞﾊﾟ policy" Hidden by multi-width symbols: [(107, " "), (109, " "), (111, " "), (114, " "), (116, " ")]
"  └ existing details                                                                                                        "
