engine/codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_wrapped_details_panama_two_lines.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"Working (0s)                  "
"  └ A man a plan a canal      "
"    panama                    "
